# ev3dev_ROS

./: .gitignore  LICENSE  README.md  requirements.txt
controls/: CMakeLists.txt  package.xml
controls/launch/: controls.launch  controls_simulation.launch
controls/scripts/: Inverse_kinematic.py  controller.py  forward_kinematic.py
ev3_launch_pkg/: CMakeLists.txt  package.xml
ev3_launch_pkg/launch/: ev3_teleop.launch  ev3_teleop_simulate.launch
gui/: CMakeLists.txt  package.xml  setup.py
gui/launch/: gui.launch  gui_rqt.launch  rqt_plugin.launch
gui/resource/: gui_diff_control.perspective  rqt_control_gui_plugin.xml
gui/scripts/: app.py  rqt_app.py
gui/src/gui/: gui.py  rqt_plugin.py
gui/src/gui/controls/: buttons.py  keys.py  units.py
gui/src/gui/styles/: styles.py
gui/src/gui/views/frames/: differencial_frame.py  frame.py
mqtt/: CMakeLists.txt  package.xml  setup.py
mqtt/launch/: mqtt.launch
mqtt/scripts/: mqtt_messenger.py
mqtt/src/mqtt/: delegate.py  messages.py  mqtt_remote_method_calls.py  units.py
ugv_description/: CMakeLists.txt  package.xml
ugv_description/launch/: ev3_diff_robot.launch
ugv_description/meshes/collada/: modelo_base_diff_wheel_caster.dae  modelo_base_diff_wheel_left.dae  modelo_base_diff_wheel_right.dae
ugv_description/meshes/materials/scripts/: custom.material
ugv_description/rviz/: diff_robot_config.rviz
ugv_description/urdf/: simple_diff_robot_gazebo.xacro  simple_diff_robot_urdf.xacro
ugv_description/worlds/: empty.world
