<?xml version="1.0"?>
<package format="2">
  <name>controls</name>
  <version>0.0.1</version>
  <description>The controls package</description>

  <maintainer email="jdaleman@unal.edu.co">JSDaleman</maintainer>
  <author email="jdaleman@unal.edu.co">JSDaleman</author> 
  <license>MIT</license>
  <url type="website">https://github.com/JSDaleman/ev3dev_ROS</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
