<?xml version="1.0"?>
<package format="2">
  <name>mqtt</name>
  <version>0.0.1</version>
  <description>The mqtt package</description>

  <maintainer email="jdaleman@unal.edu.co">JSDaleman</maintainer>
  <author email="jdaleman@unal.edu.co">JSDaleman</author> 
  <license>MIT</license>
  <url type="website">https://github.com/JSDaleman/ev3dev_ROS</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
